fix: avoid containers from overflowing small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,6 +86,7 @@ body > main {
   margin-bottom: 2rem;
   max-width: 42rem;
   width: 100%;
+  box-sizing: border-box;
 }
 
 body > aside {
@@ -96,6 +97,7 @@ body > aside {
   margin-bottom: 2rem;
   max-width: 42rem;
   width: 100%;
+  box-sizing: border-box;
 }
 
 aside > nav > ul {
